--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
 * {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Open Sans', sans-serif;
+}
+
+body,
+button,
+input {
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -18,7 +24,7 @@ nav {
   background: #1F1F3D;
 }
 
-nav p {
+h1 {
   height: 45px;
   font-size: 2em;
   margin-left: 20px;
@@ -30,25 +36,106 @@ span {
   color: #FFC30C;
 }
 
+
 nav input {
   height: 46px;
-  width: 30%;
+  width: 70%;
   margin-right: 20px;
   border-radius: 4px;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border: none;
+  padding: 9px;
+  font-size: 1em;
+}
+
+.search-btn-input {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 30%;
+}
+
+.search-btn {
+  width: 12%;
+  margin: 0;
+  background-color: #C8D3D9;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
 main {
   display: grid;
+  grid-template-columns: 1fr 3fr;
   grid-template-areas:
   "leftside rightside"
 }
 
 .left-side {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   grid-area: leftside;
   height: 900px;
-  border: 1px solid blue;
+  border: 2px solid #436A7B;
+  background-color: #587A8A;
 }
+
+.title-input,
+.task-input {
+  width: 336px;
+  height: 46px;
+  border-radius: 4px;
+  border: solid 2px #1F1F3D;
+}
+
+.task-title-input p,
+.task-item-input p {
+  color: #C7D3D9;
+  font-size: 1em;
+  font-weight: 600;
+  margin-top: 10px;
+}
+
+.task-input {
+  margin-bottom: 10px;
+}
+
+.task-and-buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 418px;
+  border-bottom: solid 2px #436A7B;
+}
+
+
+button,
+.filter-btn-section button {
+  height: 46px;
+  width: 336px;;
+  margin-top: 25px;
+  color: #FFFFFF;
+  background-color: #1F1F3D;
+  font-size: 1.2em;
+  font-weight: 600;
+  padding: 5px;
+  border: solid 2px #1F1F3D;
+}
+
+.clear-btn {
+  margin-bottom: 25px;
+}
+
+
+.filter-btn-section button {
+  width: 336px;
+}
+
 
 .right-side {
   grid-area: rightside;
+  /* border: 1px solid red; */
 }
