Add styling for unsaved taskes container

--- a/style.css
+++ b/style.css
@@ -99,6 +99,12 @@ main {
   margin-top: 10px;
 }
 
+.unsaved-tasks {
+  width: 400px;
+  height: auto;
+  border: 1px solid red;
+}
+
 .add-task-btn-input {
   display: flex;
 }
